log
Sat, May 17, 2025 12:56:36 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sat, May 17, 2025  1:13:13 PM: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:18: error: unused variable 'l' [-Werror=unused-variable]
     int i, j, k, l;
                  ^
cc1.exe: all warnings being treated as errors
2f5dd32
Sat, May 17, 2025  1:14:21 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:18: error: unused variable 'l' [-Werror=unused-variable]
     int i, j, k, l;
                  ^
cc1.exe: all warnings being treated as errors
075fad2
Sat, May 17, 2025  1:15:22 PM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  3|4
total_score: 20/70
aff5dd9
Sat, May 17, 2025  1:21:59 PM: 
 sudoku.c | 24 ++++++++++++++----------
 1 file changed, 14 insertions(+), 10 deletions(-)
 tests:  3|4
total_score: 20/70
878a1e5
Sat, May 17, 2025  1:31:53 PM: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  5|3
total_score: 35/70
0261180
Sat, May 17, 2025  1:33:55 PM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|2
total_score: 45/70
a2370d5
Sat, May 17, 2025  1:39:56 PM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:150:11: error: unused variable 'ptr' [-Werror=unused-variable]
     void* ptr = first(adj);
           ^~~
cc1.exe: all warnings being treated as errors
0099f3b
Sat, May 17, 2025  1:40:20 PM: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  6|2
total_score: 45/70
027437f
Sat, May 17, 2025  1:49:39 PM: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
9e6ac2b
